<resources>
    <string name="app_name">Cadastro Clientes</string>
    <string name="title_activity_tela_principal">Tela Principal</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edt_Nome">Nome</string>
    <string name="edt_Telefone">edt_Telefone</string>
    <string name="edt_Bairro">edt_Bairro</string>
    <string name="edt_Lazer">edt_Lazer</string>
    <string name="edt_Obs">edt_Obs</string>
    <string name="btn_Salvar">btn_Salvar</string>
    <string name="btn_Salvare">Salvar</string>
    <string name="edt_Tel">Telefone</string>
    <string name="edt_bairro">Bairro</string>
    <string name="edt_lazer">Lazer</string>
    <string name="edt_obs">Observações</string>
    <string name="Search">Pesquisar</string>
    <string name="menu_Cadastrar">Cadastrar</string>
    <string name="menu_Add">Adicionar Corte</string>
    <string name="menu_Atual">Atualizar Corte</string>
    <string name="menu_Excluir">Excluir Cliente</string>
    <string name="txt_Laterais">Comprimento Lateral</string>
    <string name="txt_Topo">Comprimento Topo</string>
    <string name="txt_Topetee">Comprimento Topete</string>
    <string name="txt_Textu">Texturização</string>
    <string name="txt_Encaixe">Encaixe</string>
    <string name="txt_Acabamento">Acabamento</string>
    <string name="Cadastro_Realizado">\"Cadastro foi feito com sucesso\"</string>
    <string name="Nome_Invalido">Nome inválido</string>
    <string name="Cadastro_Atualizado">Cadastro atualizado com sucesso</string>
    <string name="txt_Tapere">Taper</string>
    <string name="edt_ObsServ">Observações</string>
    <string name="txt_Nome">Nome</string>
    <string name="txt_Topete">Comprimento Topete</string>
    <string name="txt_Topoe">Comprimento Topo</string>
    <string name="txt_Lateral">Comprimento Lateral</string>
    <string name="txt_Textura">Texturização</string>
    <string name="txt_Encaixee">Encaixe</string>
    <string name="txt_Acabamentoe">Acabamento</string>
    <string name="txt_Taper">Taper</string>
    <string name="txt_Datae">Data</string>
    <string name="txt_Data">Data</string>
    <string name="txtCorte">Corte Tesoura</string>
    <string name="txtCMaquina">Corte Máquina</string>
    <string name="txtBarba">Barba</string>
    <string name="txtACabelo">Acabamentos</string>
    <string name="txtSobrancelha">Sobrancelha</string>
    <string name="txtSelagem">Selagem</string>
    <string name="txtProgressiva">Progressiva</string>
    <string name="txtCamuCabelo">Camuflagem</string>
    <string name="txtCorInf">Corte Infantil</string>
    <string name="btnImport">Importar BD</string>
    <string name="btn_Export">Exportar BD</string>
    <string name="btn_Bancos">Bancos</string>
    <string name="txtBarbaComp">Comprimento</string>
    <string name="txtBrbLat">Laterais</string>
    <string name="txtBigode">Bigode</string>
    <string name="txtBochecha">Linha Bochecha</string>
    <string name="txtLinhaGogo">Linha Pescoço</string>
    <string name="txtDetalhes">Detalhes</string>
    <string name="menu_Barba">Atualizar Barba</string>
    <string name="menu_VerServ">Ver Corte</string>
    <string name="menu_Update">Atualizar cadastro</string>
    <string name="txtBarba_comp">Comprimento Barba</string>
    <string name="txt_BarbaLat">Laterais Barba</string>
    <string name="txt_DetBarba">Detalhes Barba</string>
    <string name="menu_VerBarba">Ver Barba</string>
    <string name="Workshop">Workshop</string>
    <string name="pesquisar">Pesquisar Clientes</string>
    <string name="adicionar">Adicionar Clientes</string>
    <string name="agenda">Verificar Agenda</string>
    <string name="controle">Controle de Serviços</string>
</resources>