<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Controle">

    <Button
        android:id="@+id/btnCorTes"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:onClick="onClickCorTes"
        android:text="@string/txtCorte"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCorMaq"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:onClick="onClickCorMaq"
        android:text="@string/txtCMaquina"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCorTes" />
    <Button
        android:id="@+id/btnBarba"
        android:layout_width="133dp"
        android:textSize="10sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnCorMaq"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/txtBarba"/>

    <Button
        android:id="@+id/btnCorInf"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:text="@string/txtCorInf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBarba" />

    <Button
        android:id="@+id/btnAcabCabelo"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:text="@string/txtACabelo"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCorInf" />


    <Button
        android:id="@+id/btnSob"
        android:layout_width="133dp"
        android:textSize="10sp"
        android:layout_height="wrap_content"
        android:text="@string/txtSobrancelha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAcabCabelo" />


    <Button
        android:id="@+id/btnCamuCabelo"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/btnSob"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/txtCamuCabelo" />

    <Button
        android:id="@+id/btnSelagem"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/btnCamuCabelo"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/txtSelagem" />

    <Button
        android:id="@+id/btnProgressiva"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/btnSelagem"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/txtProgressiva" />

    <ListView


        android:id="@+id/lista"
        android:layout_width="205dp"
        android:layout_height="433dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/txtCaraio"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnProgressiva" />

</androidx.constraintlayout.widget.ConstraintLayout>